# mngp

./: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt  README.md
dependencies/glfw/include/GLFW/: glfw3.h
dependencies/glfw/src/: cocoa_window.m  init.c  window.c
include/neural-graphics-primitives/: common.h  nerfshot_app.h
src/: Timer.cpp  application.cpp  application.h  camera_path.cu  common.cu  dlss.cu  main.cpp  main.cu  marching_cubes.cu  nerf_loader.cu  nerfshot_app.cu  ngp_nerf.cu  openxr_hmd.cu  python_api.cu  render_buffer.cu  scene_viewer.cpp  scene_viewer.h  tinyexr_wrapper.cu
src/core/: base_type.h  log.cpp  log.h
src/core/math/: vec2.h  vec3.h
src/engine/: engine.h
src/graphics/: gpu_context.cpp  gpu_context.h  gpu_device.cpp  gpu_device.h
src/gui/: Info_window.cpp  Info_window.h  camerapath_window.cpp  camerapath_window.h  console_window.cpp  editor_window.h  gui.cpp  gui.h  postprocess_window.cpp  postprocess_window.h  scene_preview_window.cpp  scene_preview_window.h  scene_viewer_window.cpp  scene_viewer_window.h  video_window.h
src/platform/: glfw_key_codes.h  glfw_window.cpp  glfw_window.h  input.cpp  input.h  key_codes.h  platform.h  window.cpp  window.h
src/platform/events/: application_event.h  event.h  key_event.h  mouse_event.h
src/utility/: profiler_cpu.cpp  profiler_cpu.h  singleton.h  timer.h
